# autoresearch-parameter-golf

./: .gitignore  AGGRESSIVE_AUTORESEARCH_IDEAS.md  AUTORESEARCH_SETUP.md  CHANGELOG.md  CODEX_AUTORESEARCH_AGGRESSIVE_ONE_SHOT_PROMPT.md  CODEX_AUTORESEARCH_ONE_SHOT_PROMPT.md  CODEX_AUTORESEARCH_PROMPT.md  COMPETITIVE_PRIORS.md  Makefile  PRODUCTION_READINESS.md  README.md  compare_runs.py  package_submission_candidate.py  prepare.py  program.md  pyproject.toml  pytest_full_report.txt  results.tsv  summarize_artifact.py  test_train_pgolf_recurrent_qat.py  train.py  train_pgolf_recurrent_qat.py  validate_results.py  watch_run.py
.autoresearch/: notes.md  session.json
configs/: aggressive_autoresearch_ideas.json  autoresearch_5090_5min.json  autoresearch_5090_frontier_5min.json  hybrid_starter_config.json  runpod_4090_single_gpu.json  runpod_5090_single_gpu.json  runpod_h100_1x_10min.json  runpod_h100_8x_10min.json  search_policy_frontier_pure_model.json  search_policy_leaderboard_eval.json
configs/promoted/: autoresearch_5090_best.json  autoresearch_h100_1x_best.json  autoresearch_h100_8x_best.json
minimal_autoresearch/: CODEX_MINIMAL_ONE_SHOT_PROMPT.md  README.md  parameter_golf_agent_context_capsule.md  run_experiment.sh  run_forever.sh  run_once.sh  state.py
scripts/: aggressive_autoresearch_campaign.py  autoresearch_preflight.py  autoresearch_state.py  bootstrap.sh  download_official_fineweb.sh  fetch_github_pr_dataset.mjs  index_autoresearch_run.py  init_aggressive_autoresearch_session.sh  init_autoresearch_session.sh  prepare_promoted_h100_config.py  run_autoresearch_experiment.sh  run_codex_autoresearch_aggressive_loop.sh  run_codex_autoresearch_forever.sh  run_codex_autoresearch_loop.sh  run_h100_1x_eval.sh  run_h100_1x_train.sh  run_h100_8x_eval.sh  run_h100_8x_train.sh  run_h100_eval.sh  run_h100_train.sh  run_tensorboard_autoresearch.sh  runpod_4090_train.sh  runpod_5090_train.sh  summarize_recent_autoresearch.py  watch_codex_autoresearch.py  watch_codex_autoresearch.sh
state/autoresearch/: accepted_state.json
