[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-parameter-golf"
version = "0.1.0"
description = "Ongoing autoresearch experiment repo for OpenAI Parameter Golf."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "numpy==2.3.3",
  "torch==2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]
tokenizer = [
  "sentencepiece==0.2.1",
]

[project.scripts]
pgolf-prepare = "prepare:main"
pgolf-train = "train:main"
pgolf-validate-results = "validate_results:main"
pgolf-summarize-artifact = "summarize_artifact:main"
pgolf-monitor = "watch_run:main"
pgolf-watch-run = "watch_run:main"
pgolf-compare-runs = "compare_runs:main"

[tool.setuptools]
py-modules = [
  "compare_runs",
  "train",
  "prepare",
  "validate_results",
  "summarize_artifact",
  "watch_run",
  "train_pgolf_recurrent_qat",
]

[tool.pytest.ini_options]
markers = [
  "cuda: requires CUDA",
  "ddp: requires torch distributed smoke environment",
  "compile_smoke: requires torch.compile support",
  "sentencepiece_real: requires a real SentencePiece model file",
]
